Update SEO and links

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,7 +27,8 @@ Product Pricing Calculator</h1>
 
 <footer class="footer">
   <div class="container">
-    <a href="http://neilpatel.co"><i class="fa fa-heart 2x" aria-hidden="true"></i>
+    <a href="http://neilpatel.co" title="Neil Patel">
+      <i class="fa fa-heart 2x" aria-hidden="true"></i></a>
   </div>
 </footer>
 
