--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>The Product Pricing Calculator</title>
+    <title>The Product Pricing Calculator | Neil Patel </title>
     <meta name="description" content="How much money do you want to make? check out The Product Pricing Calculator today">
     <%= csrf_meta_tags %>
 
