--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -2,7 +2,8 @@
   <div class="starter-template">
     <h1><i class="fa fa-calculator" aria-hidden="true"></i>
 Product Pricing Calculator</h1>
-    <p class="lead">How much money do you want to make?<br/>Our calculator will show you! Useful if you are selling a product or setting up a monthly subsriptions!</p>
+    <br/>
+    <p class="lead">How much money do you want to <i>make?</i> Our calculator will show you! <br/> Useful if you are selling a product or setting up a monthly subscriptions!</p>
 
     <%= simple_form_for(product, html: { class: 'form-horizontal' }) do |f| %>
 
