--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,14 +15,23 @@
 
  body {
   padding-top: 50px;
+  line-height: 1.5;
+  background-color: #d9dfe4;
 }
 .starter-template {
   padding: 40px 15px;
   text-align: center;
+
 }
 
+h1 {
+  font-family: 'Eczar', serif;
+  border-bottom: 2px solid black;
+  }
+
 h2 {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Work Sans', sans-serif;
+
 }
 
 footer {
@@ -32,3 +41,4 @@ footer {
   width: 100%;
   height: 60px;
 }
+
