--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="border"></div>
 <div class="container">
   <div class="starter-template">
     <h1><i class="fa fa-calculator" aria-hidden="true"></i>
