--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,18 +3,22 @@
 </div>
 
 <section class="day">
-
-    <h2><%= "To make #{number_to_currency @product.revenue}" %></h2>
-    <p class="lead"><%= "You need to make #{number_to_currency @product.monthly_amount} a month" %><br/>
-    <%= "You need to make #{number_to_currency @product.daily_amount} a day" %></p>
+    <h1><%= "To make #{number_to_currency @product.revenue}" %></h1>
+     <p><%= "You need to make #{number_to_currency @product.monthly_amount} a month" %><br/>
+        <%= "You need to make #{number_to_currency @product.daily_amount} a day" %>
+    </p>
+    <br/>
+    <i class="fa fa-chevron-down" aria-hidden="true"></i>
 </section>
+
+
+
 
 
 <section class="people"> 
 
-    <h2>Or if you create and sell a product</h2>
-        <table>
-        <p class="lead"><%= "To make #{@product.revenue } 10,000 people to buy a
+    <h1>If you create & sell a product</h1>
+        <p><%= "To make #{@product.revenue } 10,000 people to buy a
         #{number_to_currency @product.create_and_sell_product_10000} product" %><br/>
 
         <%= "To make #{@product.revenue } 5,000 people to buy a
@@ -27,8 +31,8 @@
      #{number_to_currency @product.create_and_sell_product_1000} product" %><br/>
 
         <%= "To make #{@product.revenue } 100 people to buy a
-     #{number_to_currency @product.create_and_sell_product_100} product" %></p>
-        </table>
+     #{number_to_currency @product.create_and_sell_product_100} product" %>
+    </p>
 </section>
 
 
