--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <title>The Product Pricing Calculator | Neil Patel </title>
     <meta name="description" content="How much money do you want to make? check out The Product Pricing Calculator today">
     <%= csrf_meta_tags %>
+    <%= favicon_link_tag 'favicon.ico' %>
 
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
