--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,13 @@
       background-size: 50% 100%;
 }
 
+html 
+
+{
+  height:100%;
+  width:100%;
+}
+
  body {
   background-color: #fff0f0;
 }
@@ -61,6 +68,7 @@ h2 {
   }
 
 }
+
 
 
 section {
