--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<div class="progress">
+ <div class="progress">
   <div class="bar"></div>
 </div>
 
@@ -11,25 +11,19 @@
     <i class="fa fa-chevron-down" aria-hidden="true"></i>
 </section>
 
-
 <section class="people"> 
 
     <h1>If you create & sell a product</h1>
-        <p><%= "To make #{@product.revenue } 10,000 people to buy a
-        #{number_to_currency @product.create_and_sell_product_10000} product" %><br/>
+        <p><%= "10,000 people to buy #{number_to_currency @product.create_and_sell_product_10000} product" %><br/>
 
-        <%= "To make #{@product.revenue } 5,000 people to buy a
-        #{number_to_currency @product.create_and_sell_product_5000} product" %><br/>
+        <%= "5,000 people to buy #{number_to_currency @product.create_and_sell_product_5000} product" %><br/>
 
-        <%= "To make #{@product.revenue } 2,000 people to buy a
-        #{number_to_currency @product.create_and_sell_product_2000} product" %><br/>
+        <%= "2,000 people to buy #{number_to_currency @product.create_and_sell_product_2000} product" %><br/>
 
-        <%= "To make #{@product.revenue } 1,000 people to buy a
-     #{number_to_currency @product.create_and_sell_product_1000} product" %><br/>
+        <%= "1,000 people to buy #{number_to_currency @product.create_and_sell_product_1000} product" %><br/>
 
-        <%= "To make #{@product.revenue } 100 people to buy a
-     #{number_to_currency @product.create_and_sell_product_100} product" %>
-    </p>
+        <%= "100 people to buy #{number_to_currency @product.create_and_sell_product_100} product" %>
+        </p>
 </section>
 
 
@@ -48,4 +42,5 @@
 
     <%= link_to 'Try again', root_path , class: "btn btn-danger" %>
  </section>
+
 
